Fixed broken links

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ Proc. EMNLP, 2014.
 <p>
 "Cipher Type Detection" (Malte Nuhn and Kevin Knight),
 Proc. EMNLP, 2014.
-<A HREF="https://aclanthology.info/pdf/D/D14/D14-1185.pdf">Get paper in PDF</A>.
+<A HREF="https://aclweb.org/anthology/D/D14/D14-1185.pdf">Get paper in PDF</A>.
 
 <p><b>2013</b></p>
 
@@ -504,7 +504,7 @@ Proc. EMNLP, 2013.
 (L. Banarescu, C. Bonial, S. Cai, M. Georgescu, K. Griffitt,
 U. Hermjakob, K. Knight, P. Koehn, M. Palmer, and N. Schneider), 
 Proc. Linguistic Annotation Workshop (LAW VII-ID), ACL, 2013.
-<a href="https://aclanthology.info/pdf/W/W13/W13-2322.pdf">Get paper in PDF</a>.
+<a href="http://www.aclweb.org/anthology/W13-2322">Get paper in PDF</a>.
 
 <p>
 "Parsing Graphs with Hyperedge Replacement Grammars,"
@@ -911,7 +911,7 @@ Proc. MT Summit IX Workshop on Teaching Machine Translation, 2003.
 
 <p>"Cognates Can Improve Statistical Translation Models" 
 (G. Kondrak, D. Marcu, and K. Knight), Proc. NAACL-HLT, 2003.
-<A HREF="http://acl.ldc.upenn.edu/N/N03/N03-2016.pdf">
+<A HREF="http://www.aclweb.org/anthology/N03-2016">
 Get paper in PDF</A>.</P>
 
 <p>"Desperately Seeking Cebuano"
