--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@ Alexa, start Custom Poetry!  (After installing Custom Poetry Skill).  If you don
 If I could change my profession, I would like to try naval attach&eacute.
 
 <p>
+My <A HREF="pictures2/my-busy-robot.mp4">busy robot</a>.
+<A HREF="pictures2/hush-puppy.MOV">Hush</a>, puppy.
+
+<p>
 <A HREF="pictures/chaos.jpg">Master of Chaos</a>? Except I don't wear rouge.
-</p>
 
 <p>
 We built an
@@ -98,8 +101,6 @@ We built an
 and 
 <A HREF="extra/den1.mp4">lightning</a> 
 in Denver.
-</p>
-
 
 <p>Just your average <A HREF="pictures/creepy-face.jpg">face</A>.  Send bug reports to <a href="http://static.googleusercontent.com/media/research.google.com/en/us/archive/unsupervised_icml2012.pdf">Google</a>.
 
