--- a/index.html
+++ b/index.html
@@ -11,28 +11,23 @@
 <IMG WIDTH=100 ALIGN=RIGHT SRC="pictures/KevinKnight.jpg"> 
 
 <P>
-<A HREF="https://www.usc.edu"">USC</A>/<A HREF="http://www.isi.edu">Information Sciences Institute</A>,
-
-4676 Admiralty Way,
-Marina del Rey, CA 90292,
-e-mail: 
+E-mail: 
 <script LANGUAGE="JavaScript1.2">
-document.write("kni"+"ght@is"+"i.edu")
+document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 </script>
-
 </P>
-<P>
-Research Director and Fellow,
 
-<A HREF="http://www.isi.edu">Information Sciences Institute</A> (ISI).
-</P>
+<p>
+Chief Scientist for Natural Language Processing, <a href="https://en.wikipedia.org/wiki/DiDi_(company)">Didi Chuxing</a>. (June 1, 2018)
+
 <P>
 Professor in the
 <A HREF="http://cwis.usc.edu/dept/cs/">Department of Computer Science</A>
 of the
 <A HREF="extra/usc-ball.jpg">
-University of Southern California</A>.
+University of Southern California</A> (on leave).
 </P>
+
 <P>
 Research interests include: artificial intelligence, natural language 
 processing, machine translation, machine learning,
@@ -70,13 +65,10 @@ Areas of interest include natural language, machine reading, creative language g
 Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</a>?  Don't let <a href="http://www.history.com/news/this-supercomputer-was-programmed-to-think-like-the-zodiac-killer">him</a> cash you outside.
 
 
-<p>I'm involved in natural language research at USC/ISI.
-We have lots of <A HREF="http://www.isi.edu/research_groups/nlg/projects">projects</A>
+<p> At USC/ISI, we have lots of <A HREF="http://www.isi.edu/research_groups/nlg/projects">projects</A>
 and seminars.  How to 
 <A HREF="extra/seminar-how-to.pdf"> organize</a> 
 the <A HREF="http://nlg.isi.edu/nl-seminar/"> natural language seminar</a>.
-
-<p>Now <a href="http://www.isi.edu/technology_groups/insy/joining_us/researchers">hiring postdocs and researchers</a> in natural language processing.
 
 <p>
 Alexa, start Custom Poetry!  (After installing Custom Poetry Skill).  If you don't have Alexa, make poems <a href="http://52.24.230.241/poem/">here</a>.
@@ -190,6 +182,8 @@ one Lincoln was assassinated in."
 
 <p> I have been fortunate to work with great students.  
 PhD graduates include:
+<b>Xing Shi</b> (thesis on recurrent networks),
+<b>Marjan Ghazvininejad</b> (thesis on creative language generation),
 <b>Qing Dou</b> (thesis on decipherment),
 <b>Steve DeNeefe</b> (thesis on adjoining for MT),
 <b>Sujith Ravi</b> (thesis on decipherment),
@@ -271,6 +265,36 @@ I think Gary Shteyngart is funny.
 <a name=pubs >
 <H2><font size=+6>S</font>elected Publications</H2> 
 (Well, OK, I went ahead and selected them all)
+
+<p><b>2018</b></p>
+
+<p>
+"Modeling Naive Psychology of Characters in Simple Commonsense Stories." (H. Rashkin, A. Bosselut, M. Sap, K. Knight, and Y. Choi), Proc. ACL, 2018.
+
+<p>
+"Paper Abstract Writing through Rewriting Mechanism" (Q. Wang, Z. Zhou, L. Huang, S. Whitehead, B. Zhang, H. Ji and K. Knight), Proc. ACL, 2018.
+
+<p>
+"Translating a Language You Don't Know in the Chinese Room" (U. Hermjakob, J. May, M. Pust, and K. Knight), Proc. ACL, Demo Track, 2018.
+
+<p>
+"Out-of-the-Box Universal Romanization Tool <i>uroman</i>" (U. Hermjakob, J. May, and K. Knight), Proc. ACL, Demo Track, 2018.
+
+<p>
+"Neural Poetry Translation" (M. Ghazvininejad, Y. Choi, and K. Knight),
+Proc. NAACL, 2018.
+
+<p>
+"ELISA-EDL: A Cross-Lingual Entity Extraction, Linking and Localization System" (B. Zhang, Y. Lin, X. Pan, D. Lu, J. May, K. Knight, and H. Ji), Proc. NAACL, Demo Track, 2018.
+
+<p>
+"Using Word Vectors to Improve Word Alignments for Low Resource Machine Translation" (N. Pourdamghani, M. Ghazvininejad, and K. Knight), Proc. NAACL, 2018.
+
+<p>
+"Recurrent Neural Networks as Weighted Language Recognizers" (Y. Chen, S. Gilroy, A. Maletti, J. May, and K. Knight), Proc. NAACL, 2018. <b>Outstanding Paper Award</b>.
+
+<p>
+"Abstract Meaning Representation of Constructions: The More We Include, the Better the Representation" (C. Bonial, B. Badarau, K. Griffitt, U. Hermjakob, K. Knight, T. O'Gorman, M. Palmer, and N. Schneider), Proc. LREC, 2018.
 
 <p><b>2017</b></p>
 
