Home page files 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 </P>
 
 <p>
-Chief Scientist for Natural Language Processing at <a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">startup company</a> <a href="https://en.wikipedia.org/wiki/DiDi_(company)">Didi Chuxing</a>. (June 1, 2018)
+Chief Scientist for Natural Language Processing at 
+<a href="https://en.wikipedia.org/wiki/DiDi_(company)">Didi Chuxing</a>. 
+(June 1, <a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">2018</a>)
+
+<p>
+Chief Scientist, <a href="https://specif.io">Specifio</a>.
 
 <P>
 Professor in the
