--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 <p>
 Chief Scientist for Natural Language Processing at 
 <a href="https://en.wikipedia.org/wiki/DiDi_(company)">Didi Chuxing</a>. 
-(June 1, <a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">2018</a>)
+(June 1, <a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">2018</a>).  Now hiring <a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientists</a> and <a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineers</a> for Los Angeles lab focused on Natural Language Processing.
 
 <p>
 Chief Scientist, <a href="https://specif.io">Specifio</a>.
