--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ automata theory, decipherment.
 
 <P>
 My <a href="#pubs">publications</a>.
-My <A HREF="extra/kk-vita-18-4.pdf">
+My <A HREF="vita/CV_Knight.pdf">
 vita</A>.
 </P>
 
