--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 
 <p>
 Chief Scientist for Natural Language Processing at 
-<a href="https://en.wikipedia.org/wiki/DiDi_(company)">Didi Chuxing</a>. 
-(June 1, <a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">2018</a>).  
+<a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">DiDi Chuxing</a>. 
 
 <p>
 <IMG SRC="extra/new-en.gif">
