--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ Proc. NAACL, 2018.
 
 <p>
 "Recurrent Neural Networks as Weighted Language Recognizers" (Y. Chen, S. Gilroy, A. Maletti, J. May, and K. Knight), Proc. NAACL, 2018. <b>Outstanding Paper Award</b>.
+<A HREF="http://aclweb.org/anthology/N18-1205.pdf">Get paper in PDF</A>.
 
 <p>
 "Abstract Meaning Representation of Constructions: The More We Include, the Better the Representation" (C. Bonial, B. Badarau, K. Griffitt, U. Hermjakob, K. Knight, T. O'Gorman, M. Palmer, and N. Schneider), Proc. LREC, 2018.
