Home page files 1

--- a/index.html
+++ b/index.html
@@ -290,12 +290,15 @@ I think Gary Shteyngart is funny.
 <p>
 "Neural Poetry Translation" (M. Ghazvininejad, Y. Choi, and K. Knight),
 Proc. NAACL, 2018.
+<A HREF="http://aclweb.org/anthology/N18-2011.pdf">Get paper in PDF</A>.
 
 <p>
 "ELISA-EDL: A Cross-Lingual Entity Extraction, Linking and Localization System" (B. Zhang, Y. Lin, X. Pan, D. Lu, J. May, K. Knight, and H. Ji), Proc. NAACL, Demo Track, 2018.
+<A HREF="http://aclweb.org/anthology/N18-5009.pdf">Get paper in PDF</A>.
 
 <p>
 "Using Word Vectors to Improve Word Alignments for Low Resource Machine Translation" (N. Pourdamghani, M. Ghazvininejad, and K. Knight), Proc. NAACL, 2018.
+<A HREF="http://www.aclweb.org/anthology/N18-2083.pdf">Get paper in PDF</A>.
 
 <p>
 "Recurrent Neural Networks as Weighted Language Recognizers" (Y. Chen, S. Gilroy, A. Maletti, J. May, and K. Knight), Proc. NAACL, 2018. <b>Outstanding Paper Award</b>.
@@ -303,6 +306,7 @@ Proc. NAACL, 2018.
 
 <p>
 "Abstract Meaning Representation of Constructions: The More We Include, the Better the Representation" (C. Bonial, B. Badarau, K. Griffitt, U. Hermjakob, K. Knight, T. O'Gorman, M. Palmer, and N. Schneider), Proc. LREC, 2018.
+<A HREF="http://people.cs.georgetown.edu/nschneid/p/amrcxns.pdf">Get paper in PDF</A>.
 
 <p><b>2017</b></p>
 
