--- a/index.html
+++ b/index.html
@@ -22,10 +22,19 @@ Chief Scientist for Natural Language Processing at
 
 <p>
 <IMG SRC="extra/new-en.gif">
-Now hiring for new Los Angeles-based Didi lab: <a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientists</a> and <a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineers</a>.
+Now hiring for new Los Angeles-based DiDi lab! 
+<ul>
+<li>
+<a href="didi-la-faq.html">Frequently Asked Questions</a>
+</li>
+<li>
+<a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientists</a> 
+</li>
+<li>
+<a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineers</a>
+</li>
+</ul>
 
-<p>
-Chief Scientist, <a href="https://specif.io">Specifio</a>.
 
 <P>
 Professor in the
@@ -34,6 +43,9 @@ of the
 <A HREF="extra/usc-ball.jpg">
 University of Southern California</A> (on leave).
 </P>
+
+<p>
+Chief Scientist, <a href="https://specif.io">Specifio</a>.
 
 <P>
 Research interests include: artificial intelligence, natural language 
