--- a/index.html
+++ b/index.html
@@ -320,6 +320,9 @@ Proc. NAACL, 2018.
 "Abstract Meaning Representation of Constructions: The More We Include, the Better the Representation" (C. Bonial, B. Badarau, K. Griffitt, U. Hermjakob, K. Knight, T. O'Gorman, M. Palmer, and N. Schneider), Proc. LREC, 2018.
 <A HREF="http://people.cs.georgetown.edu/nschneid/p/amrcxns.pdf">Get paper in PDF</A>.
 
+<p>
+"AMR Beyond the Sentence: the Multi-sentence AMR Corpus" (T. O'Gorman, M. Regan, K. Griffitt, U. Hermjakob, K. Knight, and M. Palmer), Proc. COLING 2018.
+
 <p><b>2017</b></p>
 
 <p>
