--- a/didi-la-faq.html
+++ b/didi-la-faq.html
@@ -50,8 +50,9 @@ For sure,
 <b>How do I apply?</b>
 <br>
 Apply for 
-<a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientists</a> or
-<a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineers</a> positions.
+<a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientist</a>, 
+<a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineer</a>, and
+<a href="https://boards.greenhouse.io/didi/jobs/1221784">Research Intern</a> positions .
 <br><br>
 
 <b>Any other questions?</b>
