Home page files 1

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Professor in the
 <A HREF="http://cwis.usc.edu/dept/cs/">Department of Computer Science</A>
 of the
 <A HREF="extra/usc-ball.jpg">
-University of Southern California</A> (on leave).
+University of Southern California</A> (1992-2018).
 </P>
 
 <p>
@@ -301,6 +301,7 @@ I think Gary Shteyngart is funny.
 
 <p>
 "Out-of-the-Box Universal Romanization Tool <i>uroman</i>" (U. Hermjakob, J. May, and K. Knight), Proc. ACL, Demo Track, 2018.
+<B>Best Demonstration Paper Award.</B>
 
 <p>
 "Neural Poetry Translation" (M. Ghazvininejad, Y. Choi, and K. Knight),
@@ -344,7 +345,7 @@ Entropy 19(1), 2017.
 "Hafez: an Interactive Poetry Generation System"
 (M. Ghazvininejad*, X. Shi*, J. Priyadarshi, and K. Knight),
 Proc. ACL Demo Track, 2017.
-<B>Best Demo Award.</B>
+<B>Best Demonstration Paper Award.</B>
 <a href="http://aclweb.org/anthology/P17-4008.pdf">Get paper in PDF</a>.
 <a href="http://52.24.230.241/poem//index.html">System</a>.
 <a href="https://www.amazon.com/USC-Custom-Poetry/dp/B06X9HNFGC/ref=sr_1_1">Alexa skill</a>.
