Home page files 1

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@ Now hiring for new Los Angeles-based DiDi lab!
 
 
 <P>
+Prior to joining DiDi, I spent many years working as a
 Professor in the
 <A HREF="http://cwis.usc.edu/dept/cs/">Department of Computer Science</A>
 of the
 <A HREF="extra/usc-ball.jpg">
-University of Southern California</A> (1992-2018).
+University of Southern California</A>.
 </P>
 
 <p>
