Home page files 1

--- a/didi-la-faq.html
+++ b/didi-la-faq.html
@@ -13,12 +13,12 @@ We're in westside Los Angeles, an excellent location convenient to beaches, rest
 
 <b>What does the lab focus on?</b>
 <br>
-We focus on large-scale natural language processing problems, including communication between people and machines, and between people and people, regardless of whether they share the same language.
+We focus on large-scale natural language processing problems, including communication between people and machines, and between people and people.
 <br><br>
 
 <b>How big is the lab?</b>
 <br>
-We are starting out with ten people in 2018.  We're a start-up lab inside a start-up company, so there is plenty of room to innovate.
+We are starting out with ten folks in 2018.  We're a start-up lab inside a start-up company, so there is plenty of room to innovate.
 <br><br>
 
 <b>Is there research?</b>
@@ -53,6 +53,11 @@ Apply for
 <a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientist</a>, 
 <a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineer</a>, and
 <a href="https://boards.greenhouse.io/didi/jobs/1221784">Research Intern</a> positions.
+<br><br>
+
+<b>I'm not on LinkedIn.</b>
+<br>
+That makes sense.  Just fill in the boxes and click Submit.
 <br><br>
 
 <b>Any other questions?</b>
