Home page files 1

--- a/didi-la-faq.html
+++ b/didi-la-faq.html
@@ -8,7 +8,7 @@ about DiDi.
 
 <b>Where is the new DiDi Los Angeles lab?</b>
 <br>
-We're in westside Los Angeles, an excellent location convenient to beaches, restaurants, boating, bike paths, and shopping.
+We're in Westside Los Angeles, an excellent location convenient to beaches, restaurants, boating, bike paths, and shopping. <a href="didi-la.jpg">Nice view</a> from the office.
 <br><br>
 
 <b>What does the lab focus on?</b>
