--- a/index.html
+++ b/index.html
@@ -40,12 +40,9 @@ Now hiring for new Los Angeles-based DiDi lab!
 
 
 <P>
-Prior to joining DiDi, I spent many years working as a
-Professor in the
+Prior to joining DiDi, I spent many years working as a professor in the
 <A HREF="http://cwis.usc.edu/dept/cs/">Department of Computer Science</A>
-of the
-<A HREF="extra/usc-ball.jpg">
-University of Southern California</A>.
+of the <A HREF="extra/usc-ball.jpg"> University of Southern California</A>.
 </P>
 
 <p>
@@ -83,6 +80,9 @@ summary</A>.
 Areas of interest include natural language, machine reading, creative language generation, machine translation, and semantics.
 </p>
 -->
+
+<p>
+Enter the <a href="china-apps.html">World of Chinese Apps</a>.
 
 <p>
 Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</a>?  Don't let <a href="http://www.history.com/news/this-supercomputer-was-programmed-to-think-like-the-zodiac-killer">him</a> cash you outside.
