Home page files 1

--- a/index.html
+++ b/index.html
@@ -82,16 +82,17 @@ Areas of interest include natural language, machine reading, creative language g
 -->
 
 <p>
+<IMG SRC="extra/new-en.gif">
 Enter the <a href="china-apps.html">World of Chinese Apps</a>.
 
 <p>
 Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</a>?  Don't let <a href="http://www.history.com/news/this-supercomputer-was-programmed-to-think-like-the-zodiac-killer">him</a> cash you outside.
 
 
-<p> At USC/ISI, we have lots of <A HREF="http://www.isi.edu/research_groups/nlg/projects">projects</A>
-and seminars.  How to 
-<A HREF="extra/seminar-how-to.pdf"> organize</a> 
-the <A HREF="http://nlg.isi.edu/nl-seminar/"> natural language seminar</a>.
+<p> I put together a long-running 
+<A HREF="http://nlg.isi.edu/nl-seminar/">natural language seminar</a>
+seminar at USC/ISI.  Here are the
+<A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
 Alexa, start Custom Poetry!  (After installing Custom Poetry Skill).  If you don't have Alexa, make poems <a href="http://52.24.230.241/poem/">here</a>.
@@ -187,9 +188,9 @@ Corpus 2</A>.
 Correspondences</A>.
 -->
 
-<p> I teach USC's <a HREF="extra/CS662_syllabus_fall_17.pdf">CS662</a>
+<p> I taught USC's <a HREF="extra/CS662_syllabus_fall_17.pdf">CS662</a>
 (Advanced Natural Language Processing, every fall). 
-We also run a Scientific Communication workshop at ISI in the spring.
+We also ran a Scientific Communication workshop at ISI in the spring.
 
 <p> I was asked to run for a position in my professional association.  
 A bogus <a HREF="extra/acl2.html">
