Home page files 1

--- a/didi-la-faq.html
+++ b/didi-la-faq.html
@@ -62,5 +62,5 @@ That makes sense.  Just fill in the boxes and click Submit.
 
 <b>Any other questions?</b>
 <br>
-Send to kevinknight@didichuxing.com.
+Send to kevinknight@didiglobal.com.
 
