Home page files 1

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</
 
 <p> I put together a long-running 
 <A HREF="http://nlg.isi.edu/nl-seminar/">natural language seminar</a>
-seminar at USC/ISI.  Here are the
+at USC/ISI.  Here are the
 <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
