Home page files 1

--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@ Proc. NAACL, 2018.
 
 <p>
 "AMR Beyond the Sentence: the Multi-sentence AMR Corpus" (T. O'Gorman, M. Regan, K. Griffitt, U. Hermjakob, K. Knight, and M. Palmer), Proc. COLING 2018.
+<A HREF="http://aclweb.org/anthology/C18-1313">Get paper in PDF</A>.
 
 <p><b>2017</b></p>
 
