Home page files 1

--- a/index.html
+++ b/index.html
@@ -293,17 +293,25 @@ I think Gary Shteyngart is funny.
 <p><b>2018</b></p>
 
 <p>
-"Modeling Naive Psychology of Characters in Simple Commonsense Stories." (H. Rashkin, A. Bosselut, M. Sap, K. Knight, and Y. Choi), Proc. ACL, 2018.
+"Multi-lingual Common Semantic Space Construction via Cluster-consistent Word Embedding" (L. Huang, K. Cho, B. Zhang, H. Ji and K. Knight), Proc. EMNLP, 2018.
+<A HREF="https://arxiv.org/pdf/1804.07875.pdf">Get paper in PDF</A>.
+
+<p>
+"Modeling Naive Psychology of Characters in Simple Commonsense Stories" (H. Rashkin, A. Bosselut, M. Sap, K. Knight, and Y. Choi), Proc. ACL, 2018.
+<A HREF="http://aclweb.org/anthology/P18-1213">Get paper in PDF</A>.
 
 <p>
 "Paper Abstract Writing through Rewriting Mechanism" (Q. Wang, Z. Zhou, L. Huang, S. Whitehead, B. Zhang, H. Ji and K. Knight), Proc. ACL, 2018.
+<A HREF="http://aclweb.org/anthology/P18-2042">Get paper in PDF</A>.
 
 <p>
 "Translating a Language You Don't Know in the Chinese Room" (U. Hermjakob, J. May, M. Pust, and K. Knight), Proc. ACL, Demo Track, 2018.
+<A HREF="http://aclweb.org/anthology/P18-4011">Get paper in PDF</A>.
 
 <p>
 "Out-of-the-Box Universal Romanization Tool <i>uroman</i>" (U. Hermjakob, J. May, and K. Knight), Proc. ACL, Demo Track, 2018.
 <B>Best Demonstration Paper Award.</B>
+<A HREF="http://www.aclweb.org/anthology/P18-4003.pdf">Get paper in PDF</A>.
 
 <p>
 "Neural Poetry Translation" (M. Ghazvininejad, Y. Choi, and K. Knight),
