--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 
 <p>
 Chief Scientist for Natural Language Processing at 
-<a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">DiDi Chuxing</a>. 
+<a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">Didi Chuxing</a>. 
 
 <p>
 <IMG SRC="extra/new-en.gif">
