--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ Chief Scientist, <a href="https://specif.io">Specifio</a>.
 
 <P>
 Research interests include: artificial intelligence, natural language 
-processing, machine translation, machine learning,
-automata theory, decipherment.
+processing, machine translation, dialog processing, automata theory, decipherment.
 </P>
 
 <P>
