--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Now hiring for new Los Angeles-based DiDi lab!
 </li>
 <li>
 <a href="https://boards.greenhouse.io/didi/jobs/1221784">Research Interns</a>
-NOTE: Deadline to apply for Summer 2019 internships is <b>January 18, 2019</b>.
+(NOTE: Deadline to apply for Summer 2019 internships is <b>January 18, 2019</b>).
 </li>
 </ul>
 
