--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ one Lincoln was assassinated in."
 
 <p> I have been fortunate to work with great students.  
 PhD graduates include:
+<b>Nima Pourdamghani</b> (thesis on low-resource MT),
 <b>Xing Shi</b> (thesis on recurrent networks),
 <b>Marjan Ghazvininejad</b> (thesis on creative language generation),
 <b>Qing Dou</b> (thesis on decipherment),
