--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Areas of interest include natural language, machine reading, creative language g
 -->
 
 <p>
-<IMG SRC="extra/new-en.gif">
+<!-- <IMG SRC="extra/new-en.gif"> -->
 Enter the <a href="china-apps.html">World of Chinese Apps</a>.
 
 <p>
@@ -96,7 +96,7 @@ at USC/ISI.  Here are the
 <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
-Alexa, start Custom Poetry!  (After installing Custom Poetry Skill).  If you don't have Alexa, make poems <a href="http://52.24.230.241/poem/">here</a>.
+Make poems <a href="http://hafez.rocks:4000/poem">here</a>.
 
 <p>
 If I could change my profession, I would like to try naval attach&eacute.
