--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ at USC/ISI.  Here are the
 <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
-Make poems <a href="http://hafez.rocks:4000/poem">here</a>.
+Make poems <a href="http://hafez.rocks:4000/poem/">here</a>.
 
 <p>
 If I could change my profession, I would like to try naval attach&eacute.
