--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@ If you don't want to read this whole page, here's a quick
 summary</A>.
 </p>
 
+<p>
+<IMG SRC="extra/new-en.gif">
+We made a nice page about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
+</p>
+
 <!--
 <p>
 <IMG SRC="extra/new-en.gif">
