--- a/index.html
+++ b/index.html
@@ -297,6 +297,13 @@ I think Gary Shteyngart is funny.
 <H2><font size=+6>S</font>elected Publications</H2> 
 (Well, OK, I went ahead and selected them all)
 
+<p><b>2019</b></p>
+
+"Plan-And-Write: Towards Better Automatic Storytelling"
+(N. Peng, R. Weischedel, K. Knight, D. Zhao, and R. Yan),
+Proc. AAAI, 2019.
+(A HREF="https://www.cs.jhu.edu/~npeng/papers/AAAI19-story-planning.pdf">Get paper in PDF</A>.
+
 <p><b>2018</b></p>
 
 <p>
