--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ I think Gary Shteyngart is funny.
 "Plan-And-Write: Towards Better Automatic Storytelling"
 (N. Peng, R. Weischedel, K. Knight, D. Zhao, and R. Yan),
 Proc. AAAI, 2019.
-(A HREF="https://www.cs.jhu.edu/~npeng/papers/AAAI19-story-planning.pdf">Get paper in PDF</A>.
+<A HREF="https://www.cs.jhu.edu/~npeng/papers/AAAI19-story-planning.pdf">Get paper in PDF</A>.
 
 <p><b>2018</b></p>
 
