--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@ described in D. Barthelme's short story
 They called for more structure...</A>.
 
 <P> <A HREF="extra/haiku-vogler.html">Haiku Vogler</A>.
+<A HREF="pictures/haiku-vogler-painting.jpg">
+What it means!</A>.
 
 <p>
 I am literally begging you to do more random restarts.
