--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ They called for more structure...</A>.
 
 <P> <A HREF="extra/haiku-vogler.html">Haiku Vogler</A>.
 <A HREF="pictures/haiku-vogler-painting.jpg">
-What it means!</A>.
+What it means</A>.
 
 <p>
 I am literally begging you to do more random restarts.
