--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@ Now hiring for new Los Angeles-based DiDi lab!
 (NOTE: Deadline to apply for Summer 2019 internships has passed).
 </li>
 </ul>
--->
 
 <P>
 Prior to joining DiDi, I spent many years working as a professor in the
@@ -49,6 +48,7 @@ of the <A HREF="extra/usc-ball.jpg"> University of Southern California</A>.
 
 <p>
 Chief Scientist, <a href="https://specif.io">Specifio</a>.
+-->
 
 <P>
 Research interests include: artificial intelligence, natural language 
@@ -96,12 +96,14 @@ Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</
 
 
 <p> I put together a long-running 
-<A HREF="http://nlg.isi.edu/nl-seminar/">natural language seminar</a>
-at USC/ISI.  Here are the
-<A HREF="extra/seminar-how-to.pdf">guidelines</a>.
+<A HREF="http://nlg.isi.edu/nl-seminar/">natural language seminar</a>.
+Here are the <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
+
+<!--
 <p>
 Make poems <a href="http://hafez.rocks:4000/poem/">here</a>.
+-->
 
 <p>
 If I could change my profession, I would like to try naval attach&eacute.
@@ -194,11 +196,11 @@ Corpus 1</A>.
 Corpus 2</A>.
 <A HREF="extra/goldstandard.txt">
 Correspondences</A>.
--->
 
 <p> I taught USC's <a HREF="extra/CS662_syllabus_fall_17.pdf">CS662</a>
 (Advanced Natural Language Processing, every fall). 
 We also ran a Scientific Communication workshop at ISI in the spring.
+-->
 
 <p> I was asked to run for a position in my professional association.  
 A bogus <a HREF="extra/acl2.html">
