--- a/index.html
+++ b/index.html
@@ -68,8 +68,18 @@ summary</A>.
 </p>
 
 <p>
+We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
+</p>
+
+<p>
+Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
+
+<p>
+Co-author, 2019 US patent on software that writes patents, written by software that writes patents.
+
+<p>
 <IMG SRC="extra/new-en.gif">
-We made a nice page about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
+<b>For the people.</b>  Co-Program Chair of First AACL 2019 (Asian ACL, joint with IJCNLP), Co-Program Chair of CCMT 2019 (China Conference on Machine Translation), Co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
 </p>
 
 <!--
@@ -304,6 +314,23 @@ I think Gary Shteyngart is funny.
 
 <p><b>2019</b></p>
 
+
+<p>
+"Decipherment of Historical Manuscript Images"
+(X. Yin, N. Aldarrab, B. Megyesi and K. Knight),
+Proc. ICDAR, 2019.
+
+<p>
+"Translating Translationese: A Two-Step Approach to Unsupervised Machine Translation"
+(N. Pourdamghani, N. Aldarrab, M. Ghazvininejad, K. Knight and J. May),
+Proc. ACL, 2019.
+
+<p>
+"PaperRobot: Incremental Draft Generation of Scientific Ideas"
+(Q. Wang, L. Huang, Z. Jiang, K. Knight, H. Ji, M. Bansal and Y. Luan),
+Proc. ACL, 2019.
+
+<p>
 "Plan-And-Write: Towards Better Automatic Storytelling"
 (N. Peng, R. Weischedel, K. Knight, D. Zhao, and R. Yan),
 Proc. AAAI, 2019.
