--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@ We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
 
 <p>
-Co-author, 2019 US patent on software that writes patents, written by software that writes patents.
+Co-author of a 2019 US patent about software that writes patents, written by software that writes patents.
 
 <p>
 <IMG SRC="extra/new-en.gif">
-<b>For the people.</b>  Co-Program Chair of First AACL 2019 (Asian ACL, joint with IJCNLP), Co-Program Chair of CCMT 2019 (China Conference on Machine Translation), Co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
+Co-Program Chair of First AACL 2019 (Asian ACL, joint with IJCNLP), Co-Program Chair of CCMT 2019 (China Conference on Machine Translation), Co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
 </p>
 
 <!--
