--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
 
 <p>
-Co-author of a 2019 US patent about software that writes patents, written by software that writes patents.
+Co-author, US patent (2019) about software that writes patents, written by software that writes patents.
 
 <p>
 <IMG SRC="extra/new-en.gif">
