--- a/index.html
+++ b/index.html
@@ -319,16 +319,19 @@ I think Gary Shteyngart is funny.
 "Decipherment of Historical Manuscript Images"
 (X. Yin, N. Aldarrab, B. Megyesi and K. Knight),
 Proc. ICDAR, 2019.
+<A HREF="https://arxiv.org/abs/1810.04297">Get paper in PDF</A>.
 
 <p>
 "Translating Translationese: A Two-Step Approach to Unsupervised Machine Translation"
 (N. Pourdamghani, N. Aldarrab, M. Ghazvininejad, K. Knight and J. May),
 Proc. ACL, 2019.
+<A HREF="https://www.aclweb.org/anthology/P19-1293">Get paper in PDF</A>.
 
 <p>
 "PaperRobot: Incremental Draft Generation of Scientific Ideas"
 (Q. Wang, L. Huang, Z. Jiang, K. Knight, H. Ji, M. Bansal and Y. Luan),
 Proc. ACL, 2019.
+<A HREF="https://www.aclweb.org/anthology/P19-1191">Get paper in PDF</A>.
 
 <p>
 "Plan-And-Write: Towards Better Automatic Storytelling"
