--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
 
 <p>
+<IMG SRC="extra/new-en.gif">
 Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about software that writes patents... written by software that writes patents.
 
 <p>
