--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver
 
 <p>
 <IMG SRC="extra/new-en.gif">
-Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about software that writes patents... written by software that writes patents.
+Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about software that writes patents... written by software, that writes patents.
 
 <p>
 <IMG SRC="extra/new-en.gif">
