--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@ Areas of interest include natural language, machine reading, creative language g
 Enter the <a href="china-apps.html">World of Chinese Apps</a>.
 
 <p>
+You're wondering why I got <a href="fried.html">fried</a>?
+
+<p>
 Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</a>?  Don't let <a href="http://www.history.com/news/this-supercomputer-was-programmed-to-think-like-the-zodiac-killer">him</a> cash you outside.
 
 
