--- a/index.html
+++ b/index.html
@@ -326,6 +326,12 @@ Proc. ICDAR, 2019.
 <A HREF="https://arxiv.org/abs/1810.04297">Get paper in PDF</A>.
 
 <p>
+"Neighbors Helping the Poor: Improving Low-Resource Machine Translation
+Using Related Languages" (N. Pourdamghani and K. Knight),
+Machine Translation, 2019.
+<A HREF="https://rdcu.be/bRVDW">Get paper in PDF</A>.
+
+<p>
 "Translating Translationese: A Two-Step Approach to Unsupervised Machine Translation"
 (N. Pourdamghani, N. Aldarrab, M. Ghazvininejad, K. Knight and J. May),
 Proc. ACL, 2019.
