--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@ We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
 
 <p>
-<IMG SRC="extra/new-en.gif">
-Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about software that writes patents... written by software that writes patents.
+Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about software that writes patents, written by software that writes patents.
 
 <p>
-<IMG SRC="extra/new-en.gif">
-Co-Program Chair of First AACL 2019 (Asian ACL, joint with IJCNLP), Co-Program Chair of CCMT 2019 (China Conference on Machine Translation), Co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
+Co-Organizer <a href="http://www.iwslt.org/doku.php">IWSLT 2020</a> (join our Japanese-Chinese translation shared task!), co-Program Chair of First AACL 2019 (Asian ACL, joint with IJCNLP), co-Program Chair of CCMT 2019 (China Conference on Machine Translation), co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
 </p>
 
 <!--
@@ -98,9 +96,9 @@ Areas of interest include natural language, machine reading, creative language g
 </p>
 -->
 
-<!--
+<!-- 
 <p>
-<!-- <IMG SRC="extra/new-en.gif"> -->
+<IMG SRC="extra/new-en.gif"> 
 Enter the <a href="china-apps.html">World of Chinese Apps</a>.
 -->
 
