--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver
 Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about software that writes patents, written by software that writes patents.
 
 <p>
-Co-Organizer <a href="http://www.iwslt.org/doku.php">IWSLT 2020</a> (join our Japanese-Chinese translation shared task!), co-Program Chair of First AACL 2019 (Asian ACL, joint with IJCNLP), co-Program Chair of CCMT 2019 (China Conference on Machine Translation), co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
+Co-Organizer <a href="http://www.iwslt.org/doku.php">IWSLT 2020</a> (join our Japanese-Chinese translation shared task!), co-Program Chair of First <a href="http://aacl2020.org/">Asia-Pacific ACL</a> 2020, co-Program Chair of CCMT 2019 (China Conference on Machine Translation), co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
 </p>
 
 <!--
