--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 Chief Scientist for Natural Language Processing at 
 <a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">Didi Chuxing</a>. 
 
-<!--
 <p>
 <IMG SRC="extra/new-en.gif">
-Now hiring for new Los Angeles-based DiDi lab! 
+Now hiring for Los Angeles-based DiDi lab! 
+<ul>
+<li>
+<a href="https://boards.greenhouse.io/didi/jobs/1221784">Research Interns</a> (January 20, 2020 deadline, including separate rec letter)
+</li>
 <ul>
 <li>
 <a href="didi-la-faq.html">Frequently Asked Questions</a>
 </li>
+<!--
 <li>
 <a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientists</a> 
 </li>
 <li>
 <a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineers</a>
-</li>
-<li>
-<a href="https://boards.greenhouse.io/didi/jobs/1221784">Research Interns</a>
-(NOTE: Deadline to apply for Summer 2019 internships has passed).
 </li>
 </ul>
 
