--- a/didi-la-faq.html
+++ b/didi-la-faq.html
@@ -54,7 +54,7 @@ Apply for
 <a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientist</a>, 
 <a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineer</a>, and
 -->
-<a href="https://boards.greenhouse.io/didi/jobs/1984960">Research Interns</a> (January 20, 2020 deadline, including separate rec letter)
+<a href="https://boards.greenhouse.io/didi/jobs/1984960">Research Summer Internship</a> (January 20, 2020 deadline, including separate rec letter)
 <br><br>
 
 <b>I'm not on LinkedIn.</b>
