--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Chief Scientist for Natural Language Processing at
 <p>
 <IMG SRC="extra/new-en.gif">
 Now hiring for Los Angeles-based DiDi lab! 
-<a href="https://boards.greenhouse.io/didi/jobs/1984960">Research Interns</a> (January 20, 2020 deadline, including separate rec letter)
+<a href="https://boards.greenhouse.io/didi/jobs/1984960">Research Summer Internships</a>. (Note January 20, 2020 deadline, including separate rec letter).
 <a href="didi-la-faq.html">Frequently Asked Questions</a>
 <!--
 <li>
