--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ Chief Scientist for Natural Language Processing at
 Now hiring for Los Angeles-based DiDi lab! 
 <a href="https://boards.greenhouse.io/didi/jobs/1984960">Research Summer Internships</a>. (Note January 20, 2020 deadline, including separate rec letter).
 <a href="didi-la-faq.html">Frequently Asked Questions</a>
+
+<p>
+<IMG SRC="extra/new-en.gif">
+We organizing a <a href="iwslt.org/doku.php?id=open_domain_translation">Japanese/Chinese common MT evaluation</a> around massive web data.  Participation is very welcome!
+
 <!--
 <li>
 <a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientists</a> 
