--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Now hiring for Los Angeles-based DiDi lab!
 
 <p>
 <IMG SRC="extra/new-en.gif">
-We organizing a <a href="iwslt.org/doku.php?id=open_domain_translation">Japanese/Chinese common MT evaluation</a> around massive web data.  Participation is very welcome!
+We organizing a <a href="http://iwslt.org/doku.php?id=open_domain_translation">Japanese/Chinese common MT evaluation</a> around massive web data.  Participation is very welcome!
 
 <!--
 <li>
