--- a/didi-la-faq.html
+++ b/didi-la-faq.html
@@ -1,7 +1,7 @@
 
 <b>What is DiDi?</b>
 <br>
-DiDi is the world's largest ride-sharing platform.  It's a six-year-old, well-funded startup company that raised 9.5 billion dollars in 2017.  Here is a 
+DiDi is the world's largest ride-sharing platform.  It's a seven-year-old, well-funded startup company that raised 9.5 billion dollars in 2017.  Here is a 
 <a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">popular magazine article</a>
 about DiDi.
 <br><br>
