--- a/index-bk.html
+++ b/index-bk.html
@@ -318,26 +318,24 @@ I think Gary Shteyngart is funny.
 <p><b>2020</b></p>
 
 <p>
-"DiDi's Machine Translation System for WMT2020"
-(T. Chen, W. Wang, W. Wei, X. Shi, X. Li, J. Ye, and K. Knight),
+""
+(),
+Proc. EMNLP, 2020.
+
+<p>
+""
+(),
+Proc. EMNLP, 2020.
+
+<p>
+""
+(),
 Proc. WMT, 2020.
-<A HREF="https://arxiv.org/pdf/2010.08185.pdf">Get paper in PDF</A>.
 
 <p>
-"Solving Historical Dictionary Codes with a Neural Language Model"
-(C. Chu, R. Valenti, and K. Knight),
-Proc. EMNLP, 2020.
-
-<p>
-"Learning to Pronounce Chinese Without a Pronunciation Dictionary"
-(C. Chu, S. Fang, and K. Knight),
-Proc. EMNLP, 2020.
-
-<p>
-"Parallel Corpus Filtering via Pre-trained Language Models"
-(B. Zhang, A. Nagesh, K. Knight),
+""
+(),
 Proc. ACL, 2020.
-<A HREF="https://www.aclweb.org/anthology/2020.acl-main.756.pdf">Get paper in PDF</A>.
 
 <p><b>2019</b></p>
 
@@ -1314,4 +1312,7 @@ Surveys, 21(1), 1989.
 
 Been doing some painting:
 <IMG ALIGN=TOP SRC="pictures/picture-movie.gif">
+Parallel Corpus Filtering via Pre-trained Language Models
+Boliang Zhang, Ajay Nagesh, Kevin Knight
 
+https://www.aclweb.org/anthology/2020.acl-main.756.pdf
