--- a/index.html
+++ b/index.html
@@ -334,6 +334,10 @@ Proc. EMNLP, 2020.
 Proc. EMNLP, 2020.
 
 <p>
+"Findings of the IWSLT 2020 Evaluation Campaign"
+(E. Ansari et al), Proc. IWSLT, 2020.
+
+<p>
 "Parallel Corpus Filtering via Pre-trained Language Models"
 (B. Zhang, A. Nagesh, K. Knight),
 Proc. ACL, 2020.
