--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@ Proc. EMNLP, 2020.
 <p>
 "Findings of the IWSLT 2020 Evaluation Campaign"
 (E. Ansari et al), Proc. IWSLT, 2020.
+<A HREF="https://www.aclweb.org/anthology/2020.iwslt-1.1v2.pdf">Get paper in PDF</A>.
 
 <p>
 "Parallel Corpus Filtering via Pre-trained Language Models"
