--- a/index.html
+++ b/index.html
@@ -327,11 +327,13 @@ Proc. WMT, 2020.
 "Solving Historical Dictionary Codes with a Neural Language Model"
 (C. Chu, R. Valenti, and K. Knight),
 Proc. EMNLP, 2020.
+<A HREF="https://arxiv.org/pdf/2010.04746.pdf">Get paper in PDF</A>.
 
 <p>
 "Learning to Pronounce Chinese Without a Pronunciation Dictionary"
 (C. Chu, S. Fang, and K. Knight),
 Proc. EMNLP, 2020.
+<A HREF="https://arxiv.org/pdf/2010.04746.pdf">Get paper in PDF</A>.
 
 <p>
 "Findings of the IWSLT 2020 Evaluation Campaign"
