--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ Co-organizer <a href="http://www.iwslt.org/doku.php">IWSLT 2020</a>, co-Program 
 </p>
 
 <p>
-Let's solve the <a href="https://www.youtube.com/watch?v=PzFIg41Igqs">3n+1</a> problem!
+<IMG SRC="extra/new-en.gif">
+Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
 </p>
 
 <!--
