--- a/index.html
+++ b/index.html
@@ -85,21 +85,15 @@ Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about softw
 Co-organizer <a href="http://www.iwslt.org/doku.php">IWSLT 2020</a>, co-Program Chair of First <a href="http://aacl2020.org/">Asia-Pacific ACL</a> 2020, co-Program Chair of CCMT 2019 (China Conference on Machine Translation), co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
 </p>
 
-
-<!--
 <p>
 <IMG SRC="extra/new-en.gif">
-<a href="http://www.isi.edu/projects/nlg/summer_internships">Summer internships</a> for 2018 now open. Applications due <b>January 22, 2018</b>.
+<a href="https://boards.greenhouse.io/didi/jobs/2559114">DiDi Los Angeles summer internships</a> for 2021 now open. Applications due <b>January 25, 2021</b>.
 </p>
--->
 
-<!--
 <p>
-<b>Looking for a job?</b>  
-<A HREF="http://www.isi.edu/technology_groups/insy/joining_us/researchers">Apply here</a> before July 15, 2015!  
-Areas of interest include natural language, machine reading, creative language generation, machine translation, and semantics.
+<IMG SRC="extra/new-en.gif">
+Open full-time positions at DiDi Los Angeles in <A HREF="https://boards.greenhouse.io/didi/jobs/1156480">science</A> and <A HREF="https://boards.greenhouse.io/didi/jobs/1156658">engineering</A>.
 </p>
--->
 
 <!-- 
 <p>
