--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ Chief Scientist, <a href="https://specif.io">Specifio</a>.
 
 <p>
 <IMG SRC="extra/new-en.gif">
-<a href="https://boards.greenhouse.io/didi/jobs/2559114">DiDi Los Angeles summer internships</a> for 2021 now open. Applications due <b>January 25, 2021</b>.
+Full-time positions open at DiDi Los Angeles in <A HREF="https://boards.greenhouse.io/didi/jobs/1156480">science</A> and <A HREF="https://boards.greenhouse.io/didi/jobs/1156658">engineering</A>.
 </p>
 
 <p>
 <IMG SRC="extra/new-en.gif">
-Open full-time positions at DiDi Los Angeles in <A HREF="https://boards.greenhouse.io/didi/jobs/1156480">science</A> and <A HREF="https://boards.greenhouse.io/didi/jobs/1156658">engineering</A>.
+<a href="https://boards.greenhouse.io/didi/jobs/2559114">DiDi Los Angeles summer internships</a> for 2021 now open. Applications due <b>January 25, 2021</b>.
 </p>
 
 
