--- a/index.html
+++ b/index.html
@@ -287,8 +287,9 @@ for big kids.
 
 <P> I used to be an Amber freak, a long time ago, and kept myself 
 <A HREF="extra/ember2.txt">amused</A>.
-Since then, three of my favorite writers are Philip K. Dick, Jack Womack,
-and Jim Thompson.  I've read Thompson's Pop 1280 quite a few times --
+Since then, five of my favorite writers are Philip K. Dick, Jack Womack,
+Jim Thompson, George Saunders, and Haruki Murakami.  
+I've read Thompson's Pop 1280 quite a few times --
 that is a god-danged good book.  Other favorites: A Scanner 
 Darkly, Man in the High Castle, Confessions of a Crap Artist, Puttering 
 about in a Small Land, Now Wait for Last Year, The Penultimate Truth, 
