--- a/index.html
+++ b/index.html
@@ -342,6 +342,11 @@ Proc. EMNLP, 2020.
 <A HREF="https://www.aclweb.org/anthology/2020.iwslt-1.1v2.pdf">Get paper in PDF</A>.
 
 <p>
+"A Hybrid Task-Oriented Dialog System with Domain and 
+Task Adaptive Pretraining" (B. Zhang, Y. Lyu, N. Ding, T. Shen,
+Z. Jia, K. Han, and K. Knight), Proc. DSTC9 Workshop (AAAI), 2021.
+
+<p>
 "Parallel Corpus Filtering via Pre-trained Language Models"
 (B. Zhang, A. Nagesh, K. Knight),
 Proc. ACL, 2020.
