--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@ Proc. EMNLP, 2020.
 "A Hybrid Task-Oriented Dialog System with Domain and 
 Task Adaptive Pretraining" (B. Zhang, Y. Lyu, N. Ding, T. Shen,
 Z. Jia, K. Han, and K. Knight), Proc. DSTC9 Workshop (AAAI), 2021.
+<A HREF="https://arxiv.org/pdf/2102.04506.pdf">Get paper in PDF</A>.
 
 <p>
 "Parallel Corpus Filtering via Pre-trained Language Models"
