--- a/index.html
+++ b/index.html
@@ -27,21 +27,11 @@ processing, machine translation, dialog processing, automata theory, deciphermen
 
 <p>
 <IMG SRC="extra/new-en.gif">
-We are organizing a <a href="http://www.statmt.org/wmt21/triangular-mt-task.html">Russian/Chinese common MT evaluation</a>.  Participation is very welcome!
+<a href="https://boards.greenhouse.io/didi/jobs/1156658">Now hiring</a> at DiDi Labs in Los Angeles! 
 
-<!--
 <p>
 <IMG SRC="extra/new-en.gif">
-Now hiring for Los Angeles-based DiDi lab! 
-<a href="https://boards.greenhouse.io/didi/jobs/1984960">Research Summer Internships</a>. (Note Jan. 20 deadline, including separate rec letter).
-<a href="didi-la-faq.html">Frequently Asked Questions</a>
-<li>
-<a href="https://boards.greenhouse.io/didi/jobs/1156480#.WvXdjNYh1oA">Research Scientists</a> 
-</li>
-<li>
-<a href="https://boards.greenhouse.io/didi/jobs/1156658#.WvXdttYh1oA">Research Engineers</a>
-</li>
-</ul>
+We are organizing a <a href="http://www.statmt.org/wmt21/triangular-mt-task.html">Russian/Chinese common MT evaluation</a>.  Participation is very welcome!
 
 <P>
 Prior to joining DiDi, I spent many years working as a professor in the
