--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@ Research interests include: artificial intelligence, natural language
 processing, machine translation, dialog processing, automata theory, decipherment.
 </P>
 
-<!-- 
 <p>
 <IMG SRC="extra/new-en.gif">
-<a href="https://boards.greenhouse.io/didi/jobs/1156658">Now hiring</a> at DiDi Labs in Los Angeles! 
--->
+<a href="https://jobs.lever.co/didi-global/3ac2694b-846b-431b-a62b-93f584534150/apply">Now hiring</a> at DiDi Labs in Los Angeles! 
 
 <p>
 <IMG SRC="extra/new-en.gif">
