--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@ Research interests include: artificial intelligence, natural language
 processing, machine translation, dialog processing, automata theory, decipherment.
 </P>
 
+
+<!-- 
 <p>
 <IMG SRC="extra/new-en.gif">
 <a href="https://jobs.lever.co/didi-global/3ac2694b-846b-431b-a62b-93f584534150">Now hiring</a> at DiDi Labs in Los Angeles! 
-
-<p>
-<IMG SRC="extra/new-en.gif">
-We are organizing a <a href="http://www.statmt.org/wmt21/triangular-mt-task.html">Russian/Chinese common MT evaluation</a>.  Participation is very welcome!
+-->
 
 <P>
 Prior to joining DiDi, I spent many years working as a professor in the
@@ -51,6 +50,10 @@ vita</A>.
 <p>
 Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
 </p>
+
+<p>
+<IMG SRC="extra/new-en.gif">
+We recently organized a <a href="http://www.statmt.org/wmt21/triangular-mt-task.html">Russian/Chinese common MT evaluation</a>.  
 
 <p>
 If you don't want to read this whole page, here's a quick
