--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ vita</A>.
 </P>
 
 <p>
-Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
+Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> Collatz conjecture!
 </p>
 
 <p>
