--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 <BODY BGCOLOR="ffffff">
+
 <TITLE> Kevin Knight's home page </TITLE>
 <!-- Created by Kevin Knight, April 1995 -->
+
 
 <p>
 
@@ -48,7 +52,7 @@ vita</A>.
 </P>
 
 <p>
-Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> Collatz conjecture!
+Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
 </p>
 
 <p>
