--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="kevincrawfordknight/favicon.ico">
 </head>
 
 <BODY BGCOLOR="ffffff">
