--- a/index.html
+++ b/index.html
@@ -302,6 +302,35 @@ I think Gary Shteyngart is funny.
 <H2><font size=+6>S</font>elected Publications</H2> 
 (Well, OK, I went ahead and selected them all)
 
+<p><b>2021</b></p>
+
+<p>
+"MeetDot: Videoconferencing with Live Translation Captions" (A. Arkhangorodsky, C. Chu, S. Fang, Y. Huang, D. Jiang, A. Nagesh, B. Zhang, and K. Knight), Proc. EMNLP Demo Track (2021).
+
+<p>
+"Learning Mathematical Properties of Integers" (M. Ryskina and K. Knight), Proc. 4th BlackboxNLP Workshop, EMNLP (2021).
+
+<!-- 
+<p>
+"Two Approaches to Building Collaborative, Task-Oriented Dialog Agents through Self-Play" (A. Arkhangorodsky, S. Fang, V. Knight, A. Nagesh, M. Ryskina, K. Knight).  Preprint.  <a href="???">Get paper in PDF.</a>
+-->
+
+<p>
+"Why Neural Machine Translation Prefers Empty Outputs" (X. Shi, Y. Xiao, and K. Knight). Preprint. <a href="https://arxiv.org/abs/2012.13454">Get paper on arXiv.</a>
+
+<p>
+"MEEP: An Open-Source Platform for Human-Human Dialog Collection and End-to-End Agent Training" (A. Arkhangorodsky, A. Axelrod, C. Chu, S. Fang, Y. Huang, A. Nagesh, X. Shi, B. Zhang, K. Knight).
+Preprint. <a href="https://arxiv.org/abs/2010.04747">Get paper on arXiv.</a>
+
+<p>
+"MUSE: Textual Attributes Guided Portrait Painting Generation" (X. Hu, P. Yu, K. Knight, H. Ji, B. Li, and H. Shi), Proc. 3rd IEEE Workshop on Artificial Intelligence for Art Creation (2021).  <a href="https://arxiv.org/abs/2011.04761">Get paper in PDF.</a>  
+
+<p>
+"A Hybrid Task-Oriented Dialog System with Domain and 
+Task Adaptive Pretraining" (B. Zhang, Y. Lyu, N. Ding, T. Shen,
+Z. Jia, K. Han, and K. Knight), Proc. DSTC9 Workshop (AAAI), 2021.
+<A HREF="https://arxiv.org/pdf/2102.04506.pdf">Get paper in PDF</A>.
+
 <p><b>2020</b></p>
 
 <p>
@@ -326,12 +355,6 @@ Proc. EMNLP, 2020.
 "Findings of the IWSLT 2020 Evaluation Campaign"
 (E. Ansari et al), Proc. IWSLT, 2020.
 <A HREF="https://www.aclweb.org/anthology/2020.iwslt-1.1v2.pdf">Get paper in PDF</A>.
-
-<p>
-"A Hybrid Task-Oriented Dialog System with Domain and 
-Task Adaptive Pretraining" (B. Zhang, Y. Lyu, N. Ding, T. Shen,
-Z. Jia, K. Han, and K. Knight), Proc. DSTC9 Workshop (AAAI), 2021.
-<A HREF="https://arxiv.org/pdf/2102.04506.pdf">Get paper in PDF</A>.
 
 <p>
 "Parallel Corpus Filtering via Pre-trained Language Models"
